--- a/views/form.xml
+++ b/views/form.xml
@@ -44,7 +44,7 @@
 
                                 <div class="row">
                                     <div class="col-md-6 col-md-offset-3">
-                                        <form action="#" method="post" class="form-inline">
+                                        <form action="#" method="post" class="form-inline call-me">
 
                                             <div t-attf-class="col-md-4 form-group #{error and 'contact_name' in error and 'has-error' or ''}">
                                                 <label class="sr-only control-label" for="contact_name">Ihr Name</label>
